essais CRUD repositories

--- a/demo/bin/main/templates/index.html
+++ b/demo/bin/main/templates/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>demo Project Cnam</title>
 </head>
 <body>
-<div id="bienvenue">
-	<span data-th-text="${msg_accueil}"></span>
-</div>
+	<div id="bienvenue">
+		<span data-th-text="${msg_accueil}"></span>
+	</div>
+	<div>
+	</div>
 
 </body>
 </html>
