Validation formulaires front/back, envoie mails

--- a/HelloSpringBoot/src/main/resources/templates/fichier.html
+++ b/HelloSpringBoot/src/main/resources/templates/fichier.html
@@ -10,7 +10,7 @@
 
        <p>Télécharger l'aide memoire des commandes git</p>   
        <a th:href="@{/vue/pdf/git_memo_fr.pdf}" target="_blank">Visionner</a> 
-      <a th:href="@{/download/git_memo_fr.pdf}" target="_blank">Télécharger</a>  
+      <a th:href="@{/telecharger/pdf/git_memo_fr.pdf}">Télécharger</a>  
       <br />     
    </body>
     
