--- a/HelloSpringBoot/src/main/resources/templates/footer.html
+++ b/HelloSpringBoot/src/main/resources/templates/footer.html
@@ -1,4 +1,10 @@
-	<footer>Ceci est le pied de page</footer>
+<!DOCTYPE html>
 
-	<script src="/libs/jquery/jquery.min.js"></script>
-	<script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<body>
+	<footer th:fragment="footer">Ceci est le pied de page</footer>
+</body>
+
+</html>
+
