--- a/Tuto_Java_JEE_TP1/.settings/org.eclipse.wst.common.component
+++ b/Tuto_Java_JEE_TP1/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="webtuto1">
+    <wb-module deploy-name="Tuto_Java_JEE_TP1">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="webtuto1"/>
-        <property name="java-output-path" value="/webtuto1/build/classes"/>
+        <property name="java-output-path" value="/Tuto_Java_JEE_TP1/build/classes"/>
+        <property name="context-root" value="Tuto_Java_JEE_TP1"/>
     </wb-module>
 </project-modules>
